fix word wrapping/break on title

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -845,7 +845,6 @@ the form-control fails to do that so we do the border ourselves */
     margin: 0 20px 0 0;
     overflow-wrap: break-word;
     padding-left: 20px;
-    word-break: break-all;
     word-wrap: break-word;
 
     a {
